Cleanup and LandingPage Improvements
* Use only LabelLink and make title and label attributes not mandatory
* Use real image names for the landing page
* Improve tests