@@ -1,4 +1,4 @@
-package com.wcc.platform.service;
+package com.wcc.platform.integrationtests;
 
 import static com.wcc.platform.domain.cms.ApiResourcesFile.CODE_OF_CONDUCT;
 import static com.wcc.platform.domain.cms.ApiResourcesFile.COLLABORATOR;
@@ -15,11 +15,12 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonNode;
 import com.wcc.platform.domain.cms.ApiResourcesFile;
+import com.wcc.platform.service.CmsService;
 import com.wcc.platform.utils.FileUtil;
+import lombok.SneakyThrows;
 import org.junit.jupiter.api.Test;
+import org.skyscreamer.jsonassert.JSONAssert;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
@@ -41,9 +42,9 @@ class CmsServiceIntegrationTest {
     assertEquals(1, result.membersByType().leads().size());
     assertEquals(1, result.membersByType().evangelists().size());
 
-    assertNull(result.membersByType().directors().get(0).getMemberType());
-    assertNull(result.membersByType().leads().get(0).getMemberType());
-    assertNull(result.membersByType().evangelists().get(0).getMemberType());
+    assertNull(result.membersByType().directors().getFirst().getMemberType());
+    assertNull(result.membersByType().leads().getFirst().getMemberType());
+    assertNull(result.membersByType().evangelists().getFirst().getMemberType());
   }
 
   @Test
@@ -71,7 +72,7 @@ class CmsServiceIntegrationTest {
 
     assertEquals(1, result.collaborators().size());
 
-    assertNotNull(result.collaborators().get(0).getMemberType());
+    assertNotNull(result.collaborators().getFirst().getMemberType());
   }
 
   @Test
@@ -90,8 +91,9 @@ class CmsServiceIntegrationTest {
     assertEquals(expectedEventsPage, result);
   }
 
+  @SneakyThrows
   @Test
-  void testGetLandingPage() throws JsonProcessingException {
+  void testGetLandingPage() {
     var result = service.getLandingPage();
 
     assertNotNull(result);
@@ -99,9 +101,6 @@ class CmsServiceIntegrationTest {
     var expected = FileUtil.readFileAsString(ApiResourcesFile.LANDING_PAGE.getFileName());
     var jsonResponse = OBJECT_MAPPER.writeValueAsString(result);
 
-    JsonNode actualJsonNode = OBJECT_MAPPER.readTree(jsonResponse);
-    JsonNode expectedJsonNode = OBJECT_MAPPER.readTree(expected);
-
-    assertEquals(expectedJsonNode, actualJsonNode);
+    JSONAssert.assertEquals(expected, jsonResponse, false);
   }
 }
